# fairyimage

./: README.md  README_dev.md  pyproject.toml  setup.cfg
docs/20210500/: slides.md
src/fairyimage/: __init__.py  captioner.py  color.py  editor.py  image_array.py  latex.py  operations.py
src/fairyimage/conversion/: __init__.py  latex.py  source.py
src/fairyimage/conversion/pygments_ext/: __init__.py  win_font.py
tests/: test_conversion.py  test_editor.py  test_image_array.py  test_operations.py  test_sample.py  test_version.py
