[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairyimage"
version = "0.0.1"
description = "Numpy like operation of images"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "Pillow", 
    "matplotlib",
    "pygments",
    "pdf2image", 
    "figpptx @ git+https://github.com/Sillte/figpptx.git"
]


[dependency-groups]
dev = [
  "pytest >=8.1.1", 
  "mypy",
  "flake8", 
]

